# ncnn-as

./: local.properties
app/: CMakeLists.txt  CMakeListsbback.txt  build.gradle
app/src/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/squeezencnn/: MainActivity.java  MobileNetssd.java  PhotoUtil.java
app/src/main/jni/: MobileNetSSD_deploy.id.h  MobileNetssd.cpp  squeezencnn_jni.cpp
app/src/main/ncnn/: Makefile  cmake_install.cmake  layer_declaration.h  layer_registry.h  layer_type_enum.h  net.cpp
app/src/main/ncnn/layer/: convolutiondepthwise.cpp  detectionoutput.h  flatten.h  yolov3detectionoutput.cpp
app/src/main/ncnn/layer/arm/: absval_arm.h  batchnorm_arm.h  bias_arm.h  clip_arm.h  convolution_1x1.h  convolution_arm.h  convolutiondepthwise_3x3.h  convolutiondepthwise_3x3_int8.h  convolutiondepthwise_5x5.h  convolutiondepthwise_arm.cpp  convolutiondepthwise_arm.h  deconvolution_arm.h  deconvolutiondepthwise_arm.cpp  deconvolutiondepthwise_arm.h  dequantize_arm.h  eltwise_arm.h  innerproduct_arm.h  lrn_arm.h  pooling_arm.h  prelu_arm.h  quantize_arm.h  relu_arm.h  scale_arm.h  sigmoid_arm.h  softmax_arm.h
app/src/main/ncnn/layer/x86/: convolution_x86.h  convolutiondepthwise_x86.h
app/src/main/res/layout/: main.xml
gradle/wrapper/: gradle-wrapper.properties
